--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
-        "laravel/framework": "^6.2"
+        "laravel/framework": "^6.2",
+        "laravel/passport": "^8.4",
+        "laravel/tinker": "^2.0",
+        "mll-lab/laravel-graphql-playground": "^2.1",
+        "nuwave/lighthouse": "^4.11"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
